7 March 2011: Matthijs
	- Update 3.2 branch (3.2.3 -> 3.2.8rc1, 18 August 2009 - 3 March 2011)

7 March 2011: Wouter:
	- check chown value and report high verbosity its error.

3 March 2011: Matthijs:
	- fix #bug352: fix hardcoded paths in manpages.

2 March 2011: Matthijs:
	- fix #bug354: make realclean cleans too much
	- added make devclean for cleaning up autoconf and automake stuff
	- Fix hardcoded paths in nsd.conf.sample and nsd.conf.5

24 February 2011: Matthijs
	- fix #bug350: refused notifies should log client ip.

24 February 2011: Wouter
	- fix bug#362: outgoing-interface and v4 vs. v6 leads to spurious
	  warning messages.
	- fix bug#363: nsd-checkconf -v does not print outgoing-interface ok.
	- fix that nsd-checkconf -o outgoing-interface omits NOKEY.

23 February 2011: Wouter
	- (merged with nsd4 on 22nd).
	- fix for bug#357, make xfrd quit with many zones.
	
22 February 2011: Matthijs
	- Patch Jakob Schlyter (setusercontext before chroot).

18 February 2011: Wouter
	- overhaul of testset, with port uniqueness and fast start and stop.

17 February 2011: Wouter
	- Fix leak of compressiontable when the domain table increases in size.
	- 24 January 2011 was release 3.2.7, move trunk to 3.2.8.

11 February 2011: Wouter
	- added test case to do with bug357.

24 January 2011: Matthijs
	- Patch Tom Hendrikx (only errors to stderr when doing nsdc patch).

20 January 2011: Wouter
	- Fix on shutdown, then getaddrinfo acquired data uses freeaddrinfo.

19 January 2011: Wouter
	- Bug #348: no -I/usr and -L/usr for libcrypto in /usr.

17 January 2011: Matthijs
	- Bump to 3.2.8.

5 January 2011: Matthijs
	- Fix nsdc update and nsdc notify
	- Force outgoing interface to be a single range acl
	- Update documentation about acl options
	- Code review
	- Fix nsdc so it can use hmac-sha* tsigs
	- Bug #347: NSEC3 nodata QTYPE=DS not at delegation mismatch

4 January 2011: Yuri
	- Doc spelling error, bug#345

15 December 2010: Wouter