@@ -1,3 +1,7 @@
+25 March 2011: Wouter
+	- Fix bug #365, you can set NSDC_ZONEC_VERBOSE and NSDC_PATCH_STYLE
+	  in the environment where nsdc runs.
+
 7 March 2011: Matthijs
 	- Update 3.2 branch (3.2.3 -> 3.2.8rc1, 18 August 2009 - 3 March 2011)
 
